--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
