--- a/angular_frontend/package.json
+++ b/angular_frontend/package.json
@@ -1,12 +1,13 @@
 {
   "name": "angular-frontend",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "ng build --base-href ./",
+    "electron": "ng build && electron .",
+    "electron-build": "ng build && electron-builder"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +29,9 @@
     "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "electron": "^33.2.1",
+    "electron-builder": "^25.1.8",
+    "electron-packager": "^17.1.2",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -35,5 +39,23 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.6.2"
+  },
+  "build": {
+  "appId": "com.yourapp.id",
+  "productName": "AngularFrontendApp",
+  "directories": {
+    "output": "dist-electron"
+  },
+  "files": [
+    "dist/",
+    "main.js",
+    "preload.js"
+  ],
+  "win": {
+    "target": "nsis"
+  },
+  "mac": {
+    "target": "dmg"
   }
+}
 }
